# rebus

./: .gitignore  README.md  datatemplate.json  fixedidioms.txt  pyproject.toml  setup.py  testrun
public/: index.html
public/css/: index.css
public/js/: main.js
rebus/: app.py  dict_builders.py  emojis.py  patterns.py  puzzle.py
